@@ -100,6 +100,9 @@ public class MovieJukeboxXMLWriter {
                 if (tag.equals("<posterURL>")) {
                     movie.setPosterURL(HTMLTools.decodeUrl(parseCData(r)));
                 }
+                if (tag.equals("<posterSubimage>")) {
+                    movie.setPosterSubimage(HTMLTools.decodeUrl(parseCData(r)));
+                }
                 if (tag.equals("<fanartURL>")) {
                     movie.setFanartURL(HTMLTools.decodeUrl(parseCData(r)));
                 }
@@ -520,6 +523,9 @@ public class MovieJukeboxXMLWriter {
         writer.writeEndElement();
         writer.writeStartElement("posterURL");
         writer.writeCharacters(HTMLTools.encodeUrl(movie.getPosterURL()));
+        writer.writeEndElement();
+        writer.writeStartElement("posterSubimage");
+        writer.writeCharacters(HTMLTools.encodeUrl(movie.getPosterSubimage()));
         writer.writeEndElement();
         writer.writeStartElement("fanartURL");
         writer.writeCharacters(HTMLTools.encodeUrl(movie.getFanartURL()));
